--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <noscript>O LOA Clima é um projeto de incidência política nas leis orçamentárias do Governo do Estado de Pernambuco.</noscript>
   <div id="root"></div>
 </body>
 
