setup: projeto DOM adaptado do projeto base LOAClima

--- a/public/index.html
+++ b/public/index.html
@@ -7,17 +7,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Incidência Política" />
-  <meta property="og:title" content="LOAClima" />
+  <meta property="og:title" content="Diagnóstico Orçamentário Municipal" />
   <meta property="og:description" content="Incidência Política" />
   <meta property="og:image" content="%PUBLIC_URL%/logo1.png" />
   <meta property="og:image:secure_url" content="%PUBLIC_URL%/logo1.png" />
-  <meta property="og:image:alt" content="Logo da LOAClima" />
+  <meta property="og:image:alt" content="Logo do DOM" />
   <meta name="google" content="notranslate">
-  <title>LOAClima</title>
+  <title>Diagnóstico Orçamentário Municipal (DOM) | Um projeto Ameciclo</title>
 </head>
 
 <body>
-  <noscript>O LOA Clima é um projeto de incidência política nas leis orçamentárias do Governo do Estado de Pernambuco.</noscript>
+  <noscript>O Diagnóstico Orçamentário Municipal (DOM) é um projeto de incidência política nas leis orçamentárias do Governo do Estado de Pernambuco, atuando especificamente no Município de Recife.</noscript>
   <div id="root"></div>
 </body>
 
